--- a/blocks/form/__item/form__item.css
+++ b/blocks/form/__item/form__item.css
@@ -10,6 +10,11 @@
   line-height: 17px;
   font-weight: 400;
   padding: 0px 0px 10px 0px;
+  margin: 0px 0px 30px 0px;
+}
+
+.form__item:nth-child(2) {
+  margin: 0px 0px 47px 0px;
 }
 
 .form__item:focus {
