--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -3,7 +3,7 @@
   width: 100%;
   max-width: 880px;
   padding: 45px 0px 37px 0px;
-  border-bottom: 1px solid #fff;
+  border-bottom: 1px solid rgba(84, 84, 84, .7);
 }
 
 @media screen and (max-width: 550px) {
