--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -5,11 +5,13 @@
   width: 150px;
   height: 50px;
   border: 2px solid #fff;
+  border-radius: 2px;
   background: #000;
   padding: 0;
   align-self: center;
   cursor: pointer;
   transition: opacity .3s ease;
+  margin: 0px 0px 0px 15px;
 }
 
 .profile__add-button:hover {
@@ -18,6 +20,7 @@
 
 @media screen and (max-width: 670px) {
   .profile__add-button {
+    margin: 0;
     width: 282px;
   }
 }
