--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -1,11 +1,11 @@
 .profile__edit-button {
-  display: inline-block;
   border: 0;
   background: #000;
   padding: 0;
   cursor: pointer;
-  margin: 0px 0px 0px 15px;
+  margin: 12px 0px 0px 18px;
   transition: opacity .2s ease;
+  grid-area: "edit-button";
 }
 
 .profile__edit-button:hover {
@@ -14,9 +14,9 @@
 
 @media screen and (max-width: 670px) {
   .profile__edit-button {
-    margin: 0px 0px 0px 0px;
     position: absolute;
-    right: -28px;
-    top: 33px;
+    margin: 0px 0px 0px 0px;
+    top: 32px;
+    right: -29px;
   }
 }
