--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -1,3 +1,14 @@
 .profile__info {
-  position: relative;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+
+}
+
+@media screen and (max-width: 670px) {
+  .profile__info {
+    flex-direction: column;
+    align-items: center;
+    row-gap: 34px;
+  }
 }
