--- a/blocks/profile/__status/profile__status.css
+++ b/blocks/profile/__status/profile__status.css
@@ -4,10 +4,16 @@
   font-size: 18px;
   line-height: 22px;
   margin: 0;
+  grid-area: "status";
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  max-width: 220px;
 }
 
 @media screen and (max-width: 670px) {
   .profile__status {
+    max-width: 170px;
     text-align: center;
     font-size: 14px;
     line-height: 17px;
