--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -4,7 +4,10 @@
   height: 100%;
   background: rgba(0, 0, 0, .5);
   position: fixed;
-  display: none;
+  visibility: hidden;
+  display: flex;
   align-items: center;
   justify-content: center;
+  opacity: 0;
+  transition: all .5s ease;
 }
