--- a/pages/index.css
+++ b/pages/index.css
@@ -34,3 +34,6 @@
 @import url(../blocks/form/__items/form__items.css);
 @import url(../blocks/form/__item/form__item.css);
 @import url(../blocks/form/__button/form__button.css);
+@import url(../blocks/image-popup/__figure/image-popup__figure.css);
+@import url(../blocks/image-popup/__picture/image-popup__picture.css);
+@import url(../blocks/image-popup/__caption/image-popup__caption.css);
