--- a/blocks/cards/__button-like/cards__button-like.css
+++ b/blocks/cards/__button-like/cards__button-like.css
@@ -1,12 +1,12 @@
 .cards__button-like {
   display: block;
-  width: 100%;
-  max-width: 22px;
+  width: 22px;
+  height: 19px;
   border: 0;
   padding: 0;
   background-color: transparent;
   background-image: url(../../../images/heart.svg);
-  background-size: contain;
+  background-size: 100%;
   background-repeat: no-repeat;
   background-position: center;
   cursor: pointer;
@@ -15,5 +15,21 @@
 }
 
 .cards__button-like:hover {
+  opacity: .5;
+}
+
+.element__like {
+  border: none;
+  vertical-align: middle;
+  background-image: url('../../../images/like_not_checked.svg');
+  background-size: 100%;
+  background-color: rgba(255, 255, 255, 0);
+  width: 22px;
+  height: 19px;
+  cursor: pointer;
+  transition: .5s;
+}
+
+.element__like:hover {
   opacity: .5;
 }
