--- a/src/blocks/form/__item/form__item.css
+++ b/src/blocks/form/__item/form__item.css
@@ -13,8 +13,12 @@
   margin: 0px 0px 30px 0px;
 }
 
-.form__item:last-child {
-  margin: 0px 0px 47px 0px;
+.form__item_type_error {
+  border-bottom: 1px solid #FF0000;
+}
+
+.form__item:nth-of-type(2) {
+  margin: 0px 0px 48px 0px;
 }
 
 .form__item:focus {
@@ -25,5 +29,10 @@
   .form__item {
     max-width: 238px;
     padding: 0px 0px 8px 0px;
+    margin: 0px 0px 50px 0px;
+  }
+
+  .form__item:nth-of-type(2) {
+    margin: 0px 0px 60px 0px;
   }
 }
