--- a/src/blocks/page/page.css
+++ b/src/blocks/page/page.css
@@ -4,6 +4,7 @@
   font-family: "Inter", "Arial", sans-serif;
   background: #000;
   width: 100%;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
