--- a/src/blocks/popup/__container/popup__container.css
+++ b/src/blocks/popup/__container/popup__container.css
@@ -1,5 +1,6 @@
 .popup__container {
   position: relative;
+  z-index: 2;
   width: 100%;
   max-width: 430px;
   background-color: #fff;
@@ -9,6 +10,7 @@
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
+  cursor: default;
 }
 
 @media screen and (max-width: 550px) {
