--- a/src/blocks/popup/popup.css
+++ b/src/blocks/popup/popup.css
@@ -4,10 +4,12 @@
   height: 100%;
   background: rgba(0, 0, 0, .5);
   position: fixed;
+  z-index: 0;
   visibility: hidden;
   display: flex;
   align-items: center;
   justify-content: center;
   opacity: 0;
+  cursor: pointer;
   transition: all .5s ease;
 }
