--- a/src/blocks/form/__item/_error/form__item-error.css
+++ b/src/blocks/form/__item/_error/form__item-error.css
@@ -1,58 +1,29 @@
 .form__item-error {
-  display: block;
+  display: inline-block;
   font-size: 12px;
   line-height: 15px;
   color: #FF0000;
-  position: absolute;
-  left: 36px;
-  width: 100%;
-  max-width: 358px;
-  height: 15px;
-  display: none;
+  visibility: hidden;
+  opacity: 0;
+  transition: all .2s ease;
+  margin: 0px 0px 13px 0px;
+}
+
+.form__item-error:last-child {
+  margin: 0px 0px 32px 0px;
 }
 
 .form__item-error_active {
-  display: block;
-}
-
-.profile-name-input-error {
-  top: 143px;
-}
-
-.profile-status-input-error {
-  top: 200px;
-}
-
-.card-name-input-error {
-  top: 143px;
-}
-
-.card-url-input-error {
-  top: 200px;
+  opacity: 1;
+  visibility: visible;
 }
 
 @media screen and (max-width: 550px) {
   .form__item-error {
-    max-width: 238px;
+    margin: 0px 0px 7px 0px;
   }
 
-  .form__item-error {
-    left: 21px;
-  }
-
-  .profile-name-input-error {
-    top: 150px;
-  }
-
-  .profile-status-input-error {
-    top: 227px;
-  }
-
-  .card-name-input-error {
-    top: 150px;
-  }
-
-  .card-url-input-error {
-    top: 227px;
+  .form__item-error:last-child {
+    margin: 0px 0px 20px 0px;
   }
 }
