--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -1,12 +1,8 @@
 .profile__avatar {
-  width: 120px;
-  height: 120px;
-  border-radius: 50%;
-  margin: 0px 30px 0px 0px;
+  position: relative;
 }
 
-@media screen and (max-width: 670px) {
-  .profile__avatar {
-    margin: 0;
-  }
+.profile__avatar:hover>.profile__edit-avatar {
+  visibility: visible;
+  opacity: 1;
 }
